--- a/Advanced_SNES_ROM_Utility/Form5.resx
+++ b/Advanced_SNES_ROM_Utility/Form5.resx
@@ -150,8 +150,11 @@
                             running on systems with another region (PAL/NTSC lock).
                             Use this function to remove most known region locks.
 
-- Apply IPS Patch: Patch your loaded ROM with an IPS patch!
-                             Supports patches with RLE hunks, expanding and truncating.</value>
+- Apply Patch: Patch your loaded ROM with an IPS or UPS patch!
+                          - IPS supports RLE hunks, expanding and truncating,
+                            also avoids EOF offset bug
+                          - UPS is able to revert a patch, if applied a second time and
+                            expands and truncates to desitnation file size</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
