--- a/Advanced_SNES_ROM_Utility/Form5.resx
+++ b/Advanced_SNES_ROM_Utility/Form5.resx
@@ -131,9 +131,10 @@
                                        24     -&gt;     31
                                        31     -&gt;     24
 
-- Expand ROM: Expands ROM to a specific EPROM size for burning
+- Expand ROM: Expands ROM to a specific size up to 64 Mbit!
+                          Only use mirroring, if normal expanding didn't work.
 
-- Split ROM: Splits ROM into multiple parts for burning on specific EPROMs
+- Split ROM: Splits ROM into equal multiple parts
 
 - Deinterleave: Some copy stations like "Game Doctor SF" or "Super UFO"
                         use interleaving when dumping HiROM games. This function
@@ -150,11 +151,10 @@
                             running on systems with another region (PAL/NTSC lock).
                             Use this function to remove most known region locks.
 
-- Apply Patch: Patch your loaded ROM with an IPS or UPS patch!
-                          - IPS supports RLE hunks, expanding and truncating,
-                            also avoids EOF offset bug
-                          - UPS is able to revert a patch, if applied a second time and
-                            expands and truncates to desitnation file size</value>
+- Apply Patch: Patch your loaded ROM with an IPS, UPS or BPS patch!
+                          - IPS supports RLE hunks, truncating and avoids EOF offset bug
+                          - UPS is able to revert a patch, if applied a second time
+                          - BPS is supported in general</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
