--- a/Advanced_SNES_ROM_Utility/Form5.resx
+++ b/Advanced_SNES_ROM_Utility/Form5.resx
@@ -151,10 +151,10 @@
                             running on systems with another region (PAL/NTSC lock).
                             Use this function to remove most known region locks.
 
-- Apply Patch: Patch your loaded ROM with an IPS, UPS or BPS patch!
+- Apply Patch: Patch your loaded ROM!
                           - IPS supports RLE hunks, truncating and avoids EOF offset bug
                           - UPS is able to revert a patch, if applied a second time
-                          - BPS is supported in general</value>
+                          - BPS, BDF and XDELTA are supported in general</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
