Fixed bug when BPS patch has metadata.

--- a/Advanced_SNES_ROM_Utility/Form4.resx
+++ b/Advanced_SNES_ROM_Utility/Form4.resx
@@ -126,8 +126,8 @@ The author cannot be held liable for damages of any kind
 arising from ist use or presence.
 
 Version 0.9.7
-Public Build --- Oct 8 2021
-©2021 Dom aka Doke
+Public Build --- Feb 20 2021
+©2021 - 2022 Dom aka Doke
 https://github.com/Dom-aka-Doke</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
