--- a/Advanced_SNES_ROM_Utility/Forms/FormSlowROMFix.resx
+++ b/Advanced_SNES_ROM_Utility/Forms/FormSlowROMFix.resx
@@ -117,6 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="labelSlowROMFixMessage.Text" xml:space="preserve">
+    <value>Removing SlowROM checks from a FastROM will force this ROM into
+SlowROM mode.
+
+This might cause some slow downs while playing.
+
+It isn't really recommended or necessary to do this anymore.
+
+This only makes sense, if you want to play this ROM on a device slower
+than 120ns.
+
+Do you want to proceed anyway?</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
